# insight

./: LICENSE  insight.py  pyproject.toml  readme.md  requirements.txt
examples/: config.yml
modules/: __init__.py  colors.py  crawler.py  directory_bruteforce.py  header_analyzer.py  plugin_loader.py  port_scan.py  print_status.py  print_table.py  progress.py  random_ua.py  reporting.py  ssl_analyzer.py  subdomain_enumeration.py  summary.py
plugins/: banner.py  example_plugin.py
tests/: test_header_analyzer.py  test_random_ua.py
