[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "insight-pentest"
version = "0.1.0"
description = "Advanced web security assessment toolkit for professionals"
authors = [{name="Pako Chalebgwa"}]
readme = "readme.md"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    "requests>=2.0"
]

[project.scripts]
insight = "insight:main"
